<?xml version="1.0" encoding="utf-8"?>
<androidx.percentlayout.widget.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_play"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nevo_mashiach.pitkiot.GamePlay"
    android:background="@mipmap/cool_background">

    <nevo_mashiach.pitkiot.NotActivities.MyButton
        android:text="@string/gameplay_pass_button"
        app:layout_heightPercent="15%"
        app:layout_widthPercent="40%"
        android:id="@+id/next"
        android:background="@drawable/button_red"
        android:textColor="#ffffffff"
        android:textSize="28sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <nevo_mashiach.pitkiot.NotActivities.MyButton
        android:text="@string/gameplay_success_button"
        app:layout_heightPercent="15%"
        app:layout_widthPercent="40%"
        android:id="@+id/success"
        android:background="@drawable/button_green"
        android:textColor="#ffffffff"
        android:textSize="28sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

    <nevo_mashiach.pitkiot.NotActivities.MyTextView
        android:text="@string/game_notes_remaining"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editScoreHeadline"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/teamNum"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffffff"
        android:textSize="21sp"
        android:gravity="center"/>

    <nevo_mashiach.pitkiot.NotActivities.MyTextView
        android:layout_marginBottom="10dp"
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/roundModeGame"
        tools:text="פנטומימה"
        android:textSize="24sp"
        android:layout_above="@+id/next"
        android:layout_centerHorizontal="true"/>

    <nevo_mashiach.pitkiot.NotActivities.MyTextView
        android:text="@string/game_successes_this_round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/currentSuccess"
        android:textColor="#ffffffff"
        android:textSize="21sp"
        android:gravity="center"
        android:layout_below="@+id/editScoreHeadline"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <nevo_mashiach.pitkiot.NotActivities.MyTextView
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:text="@string/gameplay_no_more_notes"
        android:background="@drawable/stroke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentDef"
        android:textSize="44sp"
        android:gravity="center"
        android:textColor="#ffffffff"
        android:layout_below="@+id/currentSuccess"
        android:layout_centerHorizontal="true"/>

    <nevo_mashiach.pitkiot.NotActivities.MyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        android:textSize="34sp"
        android:text="@string/game_time_remaining"
        android:gravity="center"
        android:layout_above="@+id/next"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="35dp"/>

    <ImageView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gamePlayFigureHappy"
        android:layout_below="@+id/currentDef"
        android:layout_above="@+id/time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <ImageView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gamePlayFigureSad"
        android:layout_below="@+id/currentDef"
        android:layout_above="@+id/time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <nevo_mashiach.pitkiot.NotActivities.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamNum"
        android:text="Team 1"
        android:textSize="38sp"
        android:gravity="center"
        android:textColor="#ffffffff"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

</androidx.percentlayout.widget.PercentRelativeLayout>
